gcc/testsuite/rust/rustc/ui/error-codes/E0308.rs
#![feature(intrinsics)]

extern "rust-intrinsic" {
    fn size_of<T>(); // { dg-error ".E0308." "" { target *-*-* } }
}

fn main() {
}

